--- a/css/style.css
+++ b/css/style.css
@@ -366,6 +366,13 @@ h6 {
     height: 90px !important;
 }
 
+.btn {
+    border-radius: 10px !important;
+    padding: 14px 38px !important;
+    font-size: 14px !important;
+    font-family: "Manrope-SemiBold" !important;
+}
+
 
 /*---------------------fajira product Section end ---------------*/
 
