--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,13 @@ input:focus {
 .tab-button {
     border: 0;
     background-color: transparent !important;
+    box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.12);
+}
+
+.tab-button.active {
+    border: 1px solid rgba(70, 168, 34, 1);
+    background-color: transparent !important;
+    box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.12);
 }
 
 
@@ -110,7 +117,12 @@ h5 {
 h6 {
     font-family: "Manrope-Bold";
     line-height: 44px !important;
+}
 
+.owl-carousel.owl-drag .owl-item:hover {
+    transform: scale(1.2);
+    transform-origin: 50% 50%;
+    transition: 0.4s;
 }
 
 /*-----------------Strat Hero Section---------------------*/
@@ -532,7 +544,7 @@ h6 {
 
 
 
-.graay-bg{
+.graay-bg {
     background: #F8F8F8;
 }
 
